--- a/src/app/components/basket/basket.component.css
+++ b/src/app/components/basket/basket.component.css
@@ -1,148 +1,169 @@
 ::ng-deep .p-sidebar {
-  padding: 0;
+    padding: 0;
 }
+
 ::ng-deep .p-sidebar-right {
-  width: 25rem !important;
+    width: 25rem !important;
 }
+
 ::ng-deep .p-sidebar-content {
-  height: 100%;
+    height: 86.4%;
 }
+
 ::ng-deep .p-sidebar-close {
-  padding-right: 1em;
-  z-index: 1;
+    padding-right: 1em;
+    z-index: 1;
 }
-::ng-deep .p-datatable-flex-scrollable {
-  max-height: 90.3%;
-}
+
 ::ng-deep #SendMailModal .p-dialog-header,
 ::ng-deep #SendMailModal .p-dialog-content,
 ::ng-deep #ShowBasketListModal .p-dialog-header,
 ::ng-deep #ShowBasketListModal .p-dialog-content,
 ::ng-deep #EmptyBasketModal .p-dialog-header,
 ::ng-deep #EmptyBasketModal .p-dialog-content {
-  background: white !important;
-  color: #383838;
+    background: white !important;
+    color: #383838;
 }
+
 ::ng-deep .textModal .p-dialog-content,
 ::ng-deep .textModal .p-dialog-footer {
-  padding: 0;
+    padding: 0;
 }
+
 #cancelEmptyBtn,
 #okEmptyBtn,
 #openMailBtn,
 #getListBtn {
-  height: 2.5em;
-  width: 50%;
-  margin: 0;
+    height: 2.5em;
+    width: 50%;
+    margin: 0;
 }
 
 #cancelEmptyBtn {
-  border-radius: 0 0 0 3px;
-  background-color: #6c757d;
+    border-radius: 0 0 0 3px;
+    background-color: #6c757d;
 }
+
 #okEmptyBtn,
 #openMailBtn {
-  border-radius: 0 0 3px 0;
-  background-color: #4392af;
+    border-radius: 0 0 3px 0;
+    background-color: #4392af;
 }
+
 #getListBtn {
-  border-radius: 0 0 0 3px;
-  background-color: #236088;
+    border-radius: 0 0 0 3px;
+    background-color: #236088;
 }
 
 .header {
-  height: 4.4%;
-  background-color: #f8f9fa;
+    height: 4.4%;
+    background-color: #f8f9fa;
 }
+
 .deleteBtn {
-  border: none;
-  padding: 0 0.5rem;
-  border-radius: 20px;
+    border: none;
+    padding: 0 0.5rem;
+    border-radius: 20px;
 }
+
 button:focus {
-  outline: none;
+    outline: none;
 }
+
 .deleteBtn p {
-  margin: -1px 0 1px 0;
+    margin: -1px 0 1px 0;
 }
+
 .img {
-  max-height: 2rem;
+    max-height: 2rem;
 }
-/* .invisible-button {
-  padding: 0;
-  border: none;
-  background: none;
-} */
 
 .buttons {
-  height: 6.4%;
+    height: 6.4%;
 }
+
 .basketBtn {
-  width: 50%;
-  border: none;
-  color: white;
-  height: 100%;
+    width: 50%;
+    border: none;
+    color: white;
+    height: 100%;
 }
 
 #cancelBtn {
-  background-color: #6c757d;
+    background-color: #6c757d;
 }
 
 #okBtn {
-  background-color: #4492af;
+    background-color: #4492af;
 }
 
 .tableFooter {
-  height: 3.5%;
+    height: 3.5%;
 }
 
 .qtés {
-  width: 4em;
+    width: 4em;
 }
 
 .qteBtn {
-  color: white;
-  border: none;
-  background: #4492af;
-  height: 1.35em;
+    color: white;
+    border: none;
+    background: #4492af;
+    height: 1.35em;
 }
+
 .qteBtn:focus {
-  outline: none;
+    outline: none;
 }
 
 .qteBtn:disabled {
-  opacity: 50%;
+    opacity: 50%;
 }
 
 .qteBtn span {
-  align-self: center;
+    align-self: center;
 }
 
 .listForManualMail {
-  background-color: #f1f1f1;
-  width: 35em;
-  border-radius: 3px;
+    background-color: #f1f1f1;
+    width: 35em;
+    border-radius: 3px;
 }
 
 #closeBasketListModal {
-  border: none;
-  color: white;
-  border-radius: 3px;
-  background: #4492af;
+    border: none;
+    color: white;
+    border-radius: 3px;
+    background: #4492af;
 }
 
 #copyBtn {
-  padding: 0;
-  border-radius: 3px;
+    padding: 0;
+    border-radius: 3px;
 }
 
 #copyBtnDiv:disabled {
-  background: none;
+    background: none;
 }
 
 textarea {
-  width: 100%;
-  resize: none;
-  border: none;
-  background: none !important;
+    width: 100%;
+    resize: none;
+    border: none;
+    background: none !important;
+}
+
+#basketWarning {
+    border-top: 1px solid #dbdbdb;
+    text-align: justify;
+    background: #f8f9fa;
+}
+
+#basketWarning svg {
+    margin: 0 0.5em;
+}
+
+#basketWarning p {
+    margin: 0;
+    font-style: italic;
 }
