--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -40,12 +40,18 @@
                 </td>
             </tr>
         </ng-template>
-
     </p-table>
-    <div class=" ml-4 d-flex justify-content-between tableFooter">
+    <div class="ml-4 d-flex justify-content-between tableFooter">
         <div *ngIf="basketItemsNumber !== 1">{{basketItemsNumber}} Articles</div>
         <div *ngIf="basketItemsNumber === 1">{{basketItemsNumber}} Article</div>
         <div class="mr-4">Total: {{basketTotal| number:'1.2-2'}}€</div>
+    </div>
+    <div class="d-flex justify-content-between" id="basketWarning">
+        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+            <path fill-rule="evenodd" d="M7.938 2.016a.146.146 0 0 0-.054.057L1.027 13.74a.176.176 0 0 0-.002.183c.016.03.037.05.054.06.015.01.034.017.066.017h13.713a.12.12 0 0 0 .066-.017.163.163 0 0 0 .055-.06.176.176 0 0 0-.003-.183L8.12 2.073a.146.146 0 0 0-.054-.057A.13.13 0 0 0 8.002 2a.13.13 0 0 0-.064.016zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z"/>
+            <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z"/>
+          </svg>
+        <p>Votre panier sera vidé après 2 heures sans ajout de nouveau timbre ou validation de votre part.</p>
     </div>
     <div class="d-flex buttons">
         <button id="cancelBtn" (click)="display=false" type="button" class="basketBtn">Continuer les achats</button>
