--- a/src/app/components/basket/basket.component.css
+++ b/src/app/components/basket/basket.component.css
@@ -2,12 +2,16 @@
     padding: 0;
 }
 
+.content {
+    height: 100%;
+}
+
 ::ng-deep .p-sidebar-right {
     width: 25rem !important;
 }
 
 ::ng-deep .p-sidebar-content {
-    height: 86.4%;
+    height: 100vh;
 }
 
 ::ng-deep .p-sidebar-close {
@@ -39,6 +43,10 @@
     margin: 0;
 }
 
+.basket-list {
+    max-height: 85vh;
+}
+
 #cancelEmptyBtn {
     border-radius: 0 0 0 3px;
     background-color: #6c757d;
@@ -56,7 +64,7 @@
 }
 
 .header {
-    height: 4.4%;
+    height: 4.4vh;
     background-color: #f8f9fa;
 }
 
@@ -78,15 +86,11 @@ button:focus {
     max-height: 2rem;
 }
 
-.buttons {
-    height: 6.4%;
-}
-
 .basketBtn {
     width: 50%;
     border: none;
     color: white;
-    height: 100%;
+    height: 3.55em;
 }
 
 #cancelBtn {
@@ -98,7 +102,7 @@ button:focus {
 }
 
 .tableFooter {
-    height: 3.5%;
+    height: 2em;
 }
 
 .qtés {
@@ -144,13 +148,6 @@ button:focus {
 
 #copyBtnDiv:disabled {
     background: none;
-}
-
-textarea {
-    width: 100%;
-    resize: none;
-    border: none;
-    background: none !important;
 }
 
 #basketWarning {
