--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -1,35 +1,37 @@
 <p-sidebar [(visible)]="display" position="right">
-    <p-table [value]="basketList" [scrollable]="true" scrollHeight="flex">
-        <ng-template pTemplate="header">
-            <tr>
-                <th>Qté.</th>
-                <th>Numéro</th>
-                <th>Prix</th>
-                <th></th>
-            </tr>
-        </ng-template>
-        <ng-template class="overflow-auto" pTemplate="body" let-timbre>
-            <tr>
-                <td>
-                    <div class=" qtés d-flex justify-content-between">
-                        <button [disabled]="1>=timbre.quantite" class="qteBtn d-flex align-items-center" type="button" (click)='adjustQuantity(timbre, "minus")'><span>-</span></button>
-                        <div class="qte">{{timbre.quantite}}</div>
-                        <button [disabled]="timbre.quantite >=timbre.maxQuantite" class="qteBtn d-flex align-items-center" type="button" (click)='adjustQuantity(timbre,"plus")'><span>+</span></button>
-                    </div>
-                </td>
+    <div class="content d-flex flex-column justify-content-between">
+        <div class="basket-list">
+            <p-table [value]="basketList" [scrollable]="true" scrollHeight="flex">
+                <ng-template pTemplate="header">
+                    <tr>
+                        <th>Qté.</th>
+                        <th>Numéro</th>
+                        <th>Prix</th>
+                        <th></th>
+                    </tr>
+                </ng-template>
+                <ng-template class="overflow-auto" pTemplate="body" let-timbre>
+                    <tr>
+                        <td>
+                            <div class=" qtés d-flex justify-content-between">
+                                <button [disabled]="1>=timbre.quantite" class="qteBtn d-flex align-items-center" type="button" (click)='adjustQuantity(timbre, "minus")'><span>-</span></button>
+                                <div class="qte">{{timbre.quantite}}</div>
+                                <button [disabled]="timbre.quantite >=timbre.maxQuantite" class="qteBtn d-flex align-items-center" type="button" (click)='adjustQuantity(timbre,"plus")'><span>+</span></button>
+                            </div>
+                        </td>
 
-                <td>
-                    <div class="d-flex justify-content-center">
-                        <p class="mb-0 font-weight-bold" *ngIf="timbre.catTimbre=='tas'">{{timbre.tasType}}</p>
-                        <p *ngIf="timbre.numeroTimbre !== 0" class="text-center mb-0 font-weight-bold">{{timbre.numeroTimbre}}</p>
-                        <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">*</p>
-                        <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">SG</p>
-                        <p class="mb-0" *ngIf="timbre.catTimbre=='cd'">({{timbre.anneeCoinDate}})</p>
-                        <p class="mb-0" *ngIf="timbre.catTimbre == 'obl' || timbre.catTimbre == 'spe'">{{timbre.optionalInfos}}</p>
-                    </div>
-                </td>
-                <td>{{timbre.prixTimbre}}€</td>
-                <td><button type="button" (click)="deleteTimbreFromBasket(timbre)" class="deleteBtn btn btn-outline-danger">
+                        <td>
+                            <div class="d-flex justify-content-center">
+                                <p class="mb-0 font-weight-bold" *ngIf="timbre.catTimbre=='tas'">{{timbre.tasType}}</p>
+                                <p *ngIf="timbre.numeroTimbre !== 0" class="text-center mb-0 font-weight-bold">{{timbre.numeroTimbre}}</p>
+                                <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">*</p>
+                                <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">SG</p>
+                                <p class="mb-0" *ngIf="timbre.catTimbre=='cd'">({{timbre.anneeCoinDate}})</p>
+                                <p class="mb-0" *ngIf="timbre.catTimbre == 'obl' || timbre.catTimbre == 'spe'">{{timbre.optionalInfos}}</p>
+                            </div>
+                        </td>
+                        <td>{{timbre.prixTimbre}}€</td>
+                        <td><button type="button" (click)="deleteTimbreFromBasket(timbre)" class="deleteBtn btn btn-outline-danger">
             <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-trash" fill="currentColor"
               xmlns="http://www.w3.org/2000/svg">
               <path
@@ -37,26 +39,30 @@
               <path fill-rule="evenodd"
                 d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4L4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z" />
             </svg> </button>
-                </td>
-            </tr>
-        </ng-template>
-    </p-table>
-    <div class="ml-4 d-flex justify-content-between tableFooter">
-        <div *ngIf="basketItemsNumber !== 1">{{basketItemsNumber}} Articles</div>
-        <div *ngIf="basketItemsNumber === 1">{{basketItemsNumber}} Article</div>
-        <div class="mr-4">Total: {{basketTotal| number:'1.2-2'}}€</div>
-    </div>
-    <div class="d-flex justify-content-between" id="basketWarning">
-        <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
+                        </td>
+                    </tr>
+                </ng-template>
+            </p-table>
+        </div>
+        <div class="basket-footer">
+            <div class="ml-4 d-flex justify-content-between tableFooter">
+                <div *ngIf="basketItemsNumber !== 1">{{basketItemsNumber}} Articles</div>
+                <div *ngIf="basketItemsNumber === 1">{{basketItemsNumber}} Article</div>
+                <div class="mr-4">Total: {{basketTotal| number:'1.2-2'}}€</div>
+            </div>
+            <div class="d-flex justify-content-between" id="basketWarning">
+                <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" fill="currentColor" class="bi bi-exclamation-triangle" viewBox="0 0 16 16">
             <path fill-rule="evenodd" d="M7.938 2.016a.146.146 0 0 0-.054.057L1.027 13.74a.176.176 0 0 0-.002.183c.016.03.037.05.054.06.015.01.034.017.066.017h13.713a.12.12 0 0 0 .066-.017.163.163 0 0 0 .055-.06.176.176 0 0 0-.003-.183L8.12 2.073a.146.146 0 0 0-.054-.057A.13.13 0 0 0 8.002 2a.13.13 0 0 0-.064.016zm1.044-.45a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566z"/>
             <path d="M7.002 12a1 1 0 1 1 2 0 1 1 0 0 1-2 0zM7.1 5.995a.905.905 0 1 1 1.8 0l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995z"/>
           </svg>
-        <p>Votre panier sera vidé après 2 heures sans ajout de nouveau timbre ou validation de votre part.</p>
-    </div>
-    <div class="d-flex buttons">
-        <button id="cancelBtn" (click)="display=false" type="button" class="basketBtn">Continuer les achats</button>
-        <button id="okBtn" [disabled]="basketList.length===0" routerLink="/commande" type="button" class="basketBtn">Valider
+                <p>Votre panier sera vidé après 2 heures sans ajout de nouveau timbre ou validation de votre part.</p>
+            </div>
+            <div class="d-flex buttons">
+                <button id="cancelBtn" (click)="display=false" type="button" class="basketBtn">Continuer les achats</button>
+                <button id="okBtn" [disabled]="basketList.length===0" routerLink="/commande" type="button" class="basketBtn">Valider
       la
       commande</button>
+            </div>
+        </div>
     </div>
 </p-sidebar>
