--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -1,7 +1,7 @@
 <p-sidebar [(visible)]="display" position="right">
     <div class="content d-flex flex-column justify-content-between">
         <div class="basket-list">
-            <p-table [value]="basketList" [scrollable]="true" scrollHeight="flex">
+            <p-table [value]="basketList">
                 <ng-template pTemplate="header">
                     <tr>
                         <th>Qté.</th>
