--- a/src/app/components/admin-gestion-timbres/admin-gestion-timbres.component.html
+++ b/src/app/components/admin-gestion-timbres/admin-gestion-timbres.component.html
@@ -7,11 +7,9 @@
                 <!-- CATEGORIE DU TIMBRE -->
                 <div class="btn-group col-12" role="group" aria-label="Basic example">
                     <button type="button" (click)="timbreForm.controls['categorie'].setValue('classic')" [ngClass]="{'active': timbreForm.value.categorie == 'classic'}" class="btn btn-secondary">Classique</button>
-                    <button type="button" (click)="timbreForm.controls['categorie'].setValue('spe')" [ngClass]="{'active': timbreForm.value.categorie == 'spe'}" class="btn btn-secondary">Spécial</button>
                     <button type="button" (click)="timbreForm.controls['categorie'].setValue('tas')" [ngClass]="{'active': timbreForm.value.categorie == 'tas'}" class="btn btn-secondary">Taxe Av Serv</button>
                     <button type="button" (click)="timbreForm.controls['categorie'].setValue('cd')" [ngClass]="{'active': timbreForm.value.categorie == 'cd'}" class="btn btn-secondary">Coin
               Daté</button>
-                    <button type="button" (click)="timbreForm.controls['categorie'].setValue('obl')" [ngClass]="{'active': timbreForm.value.categorie == 'obl'}" class="btn btn-secondary">Oblitéré</button>
                 </div>
 
                 <div *ngIf="timbreForm.value.categorie =='tas'" class="btn-group btn-group-sm col-6 mt-1 mx-auto" role="group" aria-label="Basic example">
@@ -28,6 +26,7 @@
                 <option value="neuf">Neuf</option>
                 <option value="occas">Charnière</option>
                 <option value="sg">Sans Gomme</option>
+                <option value="obl">Oblitéré</option>
               </select>
                     </div>
 
@@ -39,9 +38,14 @@
                     <div *ngIf="timbreForm.value.categorie == 'cd'" class="col-4">
                         <input id="anneeCoinDateInput" type="number" min="0" max="2999" placeholder="Année coin daté" aria-label="Année coin daté" class="form-control" formControlName="anneeCoinDate">
                     </div>
-                    <!-- INFOS SUPP POUR OBL/SPE/TAS -->
-                    <div *ngIf="timbreForm.value.categorie == 'classic' || timbreForm.value.categorie == 'obl' || timbreForm.value.categorie == 'spe'|| timbreForm.value.categorie == 'tas'" class="col-4">
+                    <!-- INFOS SUPP -->
+                    <div *ngIf="timbreForm.value.categorie == 'classic' || timbreForm.value.categorie == 'tas'" class="col-4">
                         <input id="optionalInfosInput" type="text" placeholder="Infos supp. (a,b..)" aria-label="infos supp." class="form-control" formControlName="optionalInfos">
+                    </div>
+                    <!-- PAIRE ? -->
+                    <div *ngIf="timbreForm.value.categorie == 'classic'" class="d-flex justify-content-center align-items-center  col-4" id="pairDiv">
+                        <input id="pairInput" type="checkbox" aria-label="paire?" class="" formControlName="isPaire">
+                        <p>Paire</p>
                     </div>
                     <!-- PRIX TIMBRE -->
                     <div class="col-4">
@@ -127,18 +131,15 @@
                     <td>
                         <div class="d-flex justify-content-center" *ngIf="editableTimbreId !== timbre.timbreId">
                             <p class="mb-0" *ngIf="timbre.catTimbre=='classic'">Classique</p>
-                            <p class="mb-0" *ngIf="timbre.catTimbre == 'spe'">Spécial</p>
+                            <p class="mb-0" *ngIf="timbre.catTimbre == 'bloc'">Blocs</p>
                             <p class="mb-0" *ngIf="timbre.catTimbre == 'tas'">Taxe Av Serv</p>
                             <p class="mb-0" *ngIf="timbre.catTimbre == 'cd'">Coin Daté</p>
-                            <p class="mb-0" *ngIf="timbre.catTimbre == 'obl'">Oblitéré</p>
                         </div>
                         <div *ngIf="editableTimbreId === timbre.timbreId">
                             <select class="custom-select" [(ngModel)]="timbreForEdition.catTimbre">
                   <option value="classic">Classique</option>
-                  <option value="spe">Spécial</option>
                   <option value="tas">Taxe Av Serv</option>
                   <option value="cd">Coin Daté</option>
-                  <option value="obl">Oblitéré</option>
                 </select>
                         </div>
                     </td>
@@ -152,7 +153,6 @@
                             <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">*</p>
                             <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">SG</p>
                             <p class="mb-0" *ngIf="timbre.etatTimbre=='cd'">({{timbre.anneeCoinDate}})</p>
-                            <p class="mb-0" *ngIf="timbre.etatTimbre == 'obl'">{{timbre.optionalInfos}}</p>
                         </div>
                         <div>
                             <input type="text" class="form-control table-input" [(ngModel)]="timbreForEdition.numeroTimbre" *ngIf="editableTimbreId === timbre.timbreId" />
