--- a/src/app/components/admin-gestion-timbres/admin-gestion-timbres.component.css
+++ b/src/app/components/admin-gestion-timbres/admin-gestion-timbres.component.css
@@ -18,6 +18,16 @@
     margin-bottom: 0.5em;
 }
 
+#pairDiv p {
+    margin-left: 0.5em;
+    margin-bottom: 0;
+}
+
+#pairInput {
+    height: 20px;
+    width: 20px;
+}
+
 .card-header {
     border: 1px solid rgba(0, 0, 0, 0.125) !important;
     border-radius: 5px;
