--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,9 @@
 <div class="d-flex justify-content-center" id="footerContent">
-  <p class="font-weight-lighter"><a href="http://cv.navillus.kim" target="_blank">© Zarhkoh </a>- Tous droits réservés
-  </p>
-  <p class="mx-2 font-weight-lighter">|</p>
-  <a href="mailto:jld_philatelie@laposte.net" class="">Contactez-moi</a>
+    <p class="font-weight-lighter">Made with <span id="heart">♥</span> by Zarhkoh - Tous droits réservés
+    </p>
+    <p class="mx-2 font-weight-lighter">|</p>
+    <a href="mailto:jld_philatelie@laposte.net" class="">Contactez-moi</a>
+    <p class="mx-2 font-weight-lighter">|</p>
+    <a routerLink="/admin">Admin</a>
+
 </div>
