added new row in sidebar

--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -18,7 +18,7 @@
     </div>
     <div class="text-center font-weight-bold sidebarTitle">DIVERS</div>
     <div class="list-group text-center">
-        <a routerLink="/timbres" [queryParams]="{category:'pack'}" class="list-group-item list-group-item-action">Paires Carnets & Blocs</a>
+        <a routerLink="/timbres" [queryParams]="{category:'bloc'}" class="list-group-item list-group-item-action">Paires Carnets & Blocs</a>
         <a routerLink="/timbres" [queryParams]="{category:'tas'}" class="list-group-item list-group-item-action">Taxe Av
     Serv</a>
         <a routerLink="/timbres" [queryParams]="{category:'cd'}" class="list-group-item list-group-item-action">Coins
