--- a/src/app/components/basket/basket.component.css
+++ b/src/app/components/basket/basket.component.css
@@ -139,6 +139,10 @@ button:focus {
     border-radius: 3px;
 }
 
+.underline p {
+    text-decoration: underline;
+}
+
 #closeBasketListModal {
     border: none;
     color: white;
