--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,6 +8,8 @@
 
         <p>Les timbres neufs avec gomme altérée, avec charnière ou 2ème choix sont repérés par <strong>*</strong> après le numéro du timbre.</p>
         <p>Les timbres neufs sans gomme sont repérés par <strong>sg</strong> après le numéro du timbre.</p>
+        <p>Les timbres oblitérés sont soulignés.</p>
+
 
         <p>Pour tout renseignement vous pouvez m'écrire en cliquant sur <a href="mailto:jld_philatelie@laposte.net"><strong>écrivez-moi.</strong></a></p>
 
