--- a/src/app/components/basket/basket.component.html
+++ b/src/app/components/basket/basket.component.html
@@ -21,13 +21,13 @@
                         </td>
 
                         <td>
-                            <div class="d-flex justify-content-center">
-                                <p class="mb-0 font-weight-bold" *ngIf="timbre.catTimbre=='tas'">{{timbre.tasType}}</p>
+                            <div class="d-flex justify-content-center" [ngClass]="{'underline': timbre.etatTimbre=='obl'}">
+                                <p class="mb-0 font-weight-bold" *ngIf="timbre.catTimbre=='tas'||timbre.catTimbre=='bloc'">{{timbre.tasType}}</p>
                                 <p *ngIf="timbre.numeroTimbre !== 0" class="text-center mb-0 font-weight-bold">{{timbre.numeroTimbre}}</p>
                                 <p class="mb-0" *ngIf="timbre.etatTimbre=='occas'">*</p>
                                 <p class="mb-0" *ngIf="timbre.etatTimbre=='sg'">SG</p>
                                 <p class="mb-0" *ngIf="timbre.catTimbre=='cd'">({{timbre.anneeCoinDate}})</p>
-                                <p class="mb-0" *ngIf="timbre.catTimbre == 'obl' || timbre.catTimbre == 'spe'">{{timbre.optionalInfos}}</p>
+                                <p class="mb-0">{{timbre.optionalInfos}}</p>
                             </div>
                         </td>
                         <td>{{timbre.prixTimbre}}€</td>
