--- a/src/app/components/devis-confirmation/devis-confirmation.component.css
+++ b/src/app/components/devis-confirmation/devis-confirmation.component.css
@@ -1,104 +1,111 @@
 :host {
-  width: 100%;
+    width: 100%;
 }
 
 ::ng-deep .textModal .p-dialog-content,
 ::ng-deep .textModal .p-dialog-footer {
-  padding: 0;
+    padding: 0;
 }
 
 ::ng-deep .p-inputtextarea {
-  width: 26em !important;
+    width: 26em !important;
+}
+
+.underline p {
+    text-decoration: underline;
 }
 
 ::ng-deep .p-inputtext {
-  width: 15rem;
+    width: 15rem;
 }
 
 ::ng-deep .p-radiobutton-label {
-  margin-bottom: 0;
+    margin-bottom: 0;
 }
 
 .invisible-button {
-  padding: 0;
-  border: none;
-  background: none;
-}
-.img {
-  max-height: 3.5rem;
+    padding: 0;
+    border: none;
+    background: none;
 }
 
-::ng-deep .p-datatable .p-datatable-tbody > tr > .imgTd {
-  padding: 0;
+.img {
+    max-height: 3.5rem;
+}
+
+::ng-deep .p-datatable .p-datatable-tbody>tr>.imgTd {
+    padding: 0;
 }
 
 .qtés {
-  width: 4em;
+    width: 4em;
 }
 
 .qteBtn {
-  color: white;
-  border: none;
-  background: #4492af;
-  height: 1.35em;
+    color: white;
+    border: none;
+    background: #4492af;
+    height: 1.35em;
 }
 
 .qteBtn:disabled {
-  opacity: 50%;
+    opacity: 50%;
 }
 
 .qteBtn span {
-  align-self: center;
+    align-self: center;
 }
 
 .deleteBtn {
-  border: none;
-  padding: 0 0.5rem;
-  border-radius: 3px;
+    border: none;
+    padding: 0 0.5rem;
+    border-radius: 3px;
 }
+
 button:focus {
-  outline: none;
+    outline: none;
 }
+
 .deleteBtn p {
-  margin: 0;
+    margin: 0;
 }
 
 #total-articles,
 #livraison,
 #email,
 #optionalMessage {
-  padding: 1em;
-  border-bottom: 1px solid #e9ecef;
+    padding: 1em;
+    border-bottom: 1px solid #e9ecef;
 }
 
 #total {
-  padding: 1em;
-  background-color: #e9ecef;
+    padding: 1em;
+    background-color: #e9ecef;
 }
 
 #total-articles {
-  border-top: 1px solid #cfd3d6;
+    border-top: 1px solid #cfd3d6;
 }
 
 #prix-unitaire {
-  font-size: 0.8em;
+    font-size: 0.8em;
 }
 
 #sendBtn {
-  background-color: #226089;
-  color: white;
-  font-family: "Montserrat";
-  border: none;
-  padding: 1em;
-  width: 100%;
-  margin-top: 0.8em;
+    background-color: #226089;
+    color: white;
+    font-family: "Montserrat";
+    border: none;
+    padding: 1em;
+    width: 100%;
+    margin-top: 0.8em;
 }
 
 #totalPrice {
-  font-size: 1.4em;
-  font-family: "Roboto_Condensed";
+    font-size: 1.4em;
+    font-family: "Roboto_Condensed";
 }
 
 .home-button {
-  width: 18em;
+    width: 18em;
 }
